k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ekiosk
  labels:
    app: ekiosk
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ekiosk
  template:
    metadata:
      labels:
        app: ekiosk
    spec:
      containers:
      - name: ekiosk
        image: matinodev/ekiosk-api:v1
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
