k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekiosk-api-service
  labels:
    app: ekiosk
spec:
  type: NodePort
  selector:
    app: ekiosk
  ports:
    - port: 8000       # The port the Service will expose
      targetPort: 8000 # The port ekiosk listens on
      nodePort: 30001  # The port on the node (host) that maps to the Service port
